--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,29 @@
+@font-face
+{
+    font-family: 'Material Icons';
+    font-style : normal;
+    font-weight: 400;
+    src        : url('../src/assets/font/iconfont.woff2') format('woff2');
+}
+  
+.iconfont
+{
+    font-family                  : 'Material Icons';
+    font-weight                  : normal;
+    font-style                   : normal;
+    font-size                    : 24px;
+    line-height                  : 1;
+    letter-spacing               : normal;
+    text-transform               : none;
+    display                      : inline-block;
+    white-space                  : nowrap;
+    word-wrap                    : normal;
+    direction                    : ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing       : antialiased;
+}
+
+
 :root {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16px;
